#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([libeverest], [0.1], [shiyimin@yeah.net])
AM_INIT_AUTOMAKE
# AC_CONFIG_SRCDIR([src/everest.cpp])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_MACRO_DIR([m4])

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
LT_INIT()         # ÉùÃ÷Ê¹ÓÃlibtool
AC_CONFIG_FILES([
    Makefile 
    samples/Makefile
    samples/print_cmd_vars/Makefile])
AC_OUTPUT
