#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([libeverest_core], [0.1], [powdog@yeah.net])
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([include/everest/SObject.h])
AC_CONFIG_HEADERS([config.h])

AC_CONFIG_MACRO_DIR([m4])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
LT_INIT()         # init libtool
AC_CONFIG_FILES([
    Makefile 
    test/Makefile
    test/SObject/Makefile
])
AC_OUTPUT
